--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,47 @@
-@import '~bootstrap/scss/bootstrap'
+@import '~bootstrap/scss/bootstrap';
+@import 'variables.scss';
+
+body {
+    background-color: white;
+}
+
+.hero {
+    padding: 100px 0;
+    text-align: center;
+    position: relative;
+
+    .avatar {
+        width: 150px;
+        border-radius: 50%;
+    }
+
+    .name {
+        font-size: 3rem;
+        font-weight: bold;
+
+        .highlight {
+            color: $primary-color;
+        }
+    }
+
+    .intro {
+        font-size: 1.5rem;
+        margin-top: 20px;
+
+        .highlight {
+            color: $primary-color;
+        }
+    }
+
+    .social-icons {
+        a {
+            color: #000;
+            margin: 0 10px;
+            font-size: 1.5rem;
+
+            &:hover {
+                color: $primary-color;
+            }
+        }
+    }
+}
